# android-photogallery

./: .gitignore  README.md  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/jp/tinyport/photogallery/: App.kt  MainActivity.kt  PhotoGalleryGlideModule.kt
app/src/main/kotlin/jp/tinyport/photogallery/di/: AppModule.kt
app/src/main/res/layout/: list_item.xml  main_activity.xml
buildSrc/src/main/groovy/: Depends.groovy
data/db/: build.gradle
data/db/schemas/jp.tinyport.photogallery.data.db.ImageDatabase/: 1.json
data/db/src/main/: AndroidManifest.xml
data/db/src/main/kotlin/jp/tinyport/photogallery/data/db/: Converters.kt  ImageDatabase.kt  ImageLocalDataSource.kt
data/db/src/main/kotlin/jp/tinyport/photogallery/data/db/dao/: ImageDao.kt
data/db/src/main/kotlin/jp/tinyport/photogallery/data/db/dao/di/: DbEntryPoint.kt
data/db/src/main/kotlin/jp/tinyport/photogallery/data/db/entity/: ImageEntity.kt
data/graphql/: build.gradle
data/graphql/src/main/: AndroidManifest.xml
data/graphql/src/main/graphql/jp/tinyport/photogallery/data/graphql/: ImageMeta.graphql  schema.json
data/graphql/src/main/kotlin/jp/tinyport/photogallery/data/graphql/: ImageServerDataSource.kt  ImageServerDataSourceImpl.kt
data/repository/: build.gradle
data/repository/src/main/: AndroidManifest.xml
data/repository/src/main/kotlin/jp/tinyport/photogallery/data/repository/: ImageRepository.kt
data/repository/src/main/kotlin/jp/tinyport/photogallery/data/repository/di/: RepositoryEntryPoint.kt  RepositoryModule.kt
model/: build.gradle
model/src/main/: AndroidManifest.xml
model/src/main/kotlin/jp/tinyport/photogallery/model/: MyImage.kt
tools/server/: Cargo.toml
tools/server/src/: main.rs
