[package]
name = "server"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
anyhow = "=1.0.38"
async-trait = "=0.1.48"
dotenv = "=0.15.0"
image = "=0.23.14"
futures = "=0.3.13"
juniper = "=0.15.3"
juniper_hyper = "=0.6.3"
serde_json = "=1.0.64"
silicon = "=0.4.1"
structopt = "=0.3.21"
syntect = "=4.5.0"
tempfile = "=3.2.0"
tracing = "=0.1.25"
tracing-subscriber = "=0.2.17"

[dependencies.chrono]
version = "=0.4.19"
features = ["serde"]

[dependencies.hyper]
# v0.13.x for junper_hyper.
version = "=0.13.10"

[dependencies.tokio]
# v0.2 for hyper v0.13.
version = "=0.2.24"
features = ["macros", "rt-threaded", "signal"]

[dependencies.url]
version = "=2.2.1"
features = ["serde"]
