[package]
name = "server"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
anyhow = "=1.0.38"
async-trait = "=0.1.48"
dotenv = "=0.15.0"
futures = "=0.3.13"
juniper_hyper = "=0.6.3"
lipsum = "=0.7.0"
serde_json = "=1.0.64"

# for pasteboard v0.1.1.
silicon = "=0.3.2"

structopt = "=0.3.21"
syntect = "=4.5.0"
tracing = "=0.1.25"
tracing-subscriber = "=0.2.17"

[dependencies.chrono]
version = "=0.4.19"
features = ["serde"]

[dependencies.hyper]
# v0.13.x for junper_hyper.
version = "=0.13.10"

[dependencies.image]
version = "=0.23.14"
features = ["png"]
default-features = false

[dependencies.juniper]
version = "=0.15.3"
features = ["url"]

[dependencies.tokio]
# v0.2 for hyper v0.13.
version = "=0.2.24"
features = ["macros", "rt-threaded", "signal"]

[dependencies.url]
version = "=2.2.1"
features = ["serde"]

# for https://github.com/segeljakt/pasteboard/issues/1
# https://github.com/Aloxaf/silicon/issues/158.
#[patch.crates-io.pasteboard]
#git = "https://github.com/segeljakt/pasteboard.git"
#rev = "c0b40605a9f57caf54bc9c83f724d46bce30b456"
[target.'cfg(target_os = "macos")'.dependencies.pasteboard]
version = "=0.1.1"
